moved headers to the top

--- a/presets/fullPage.js/examples/domitest.html
+++ b/presets/fullPage.js/examples/domitest.html
@@ -62,7 +62,7 @@
 	<div class="section welcome" id="section0">
     <div class="intro">
   		<h1>what is it about?</h1>
-  		<p>my personal website talking about coding</p>
+  		<p>This is my personal website for coding. </p>
     </div>
 	</div>
 
@@ -90,6 +90,8 @@
       
       <div class="slide" id="slide3" data-anchor="slide3">
         <h1>Earthy</h1>
+        <p>some info text</p>
+        <iframe class="earthy" src="https://earthy.herokuapp.com"></iframe>
       </div>  
 
       <div class="slide" id="slide4" data-anchor="slide4">
