--- a/presets/fullPage.js/examples/domitest.html
+++ b/presets/fullPage.js/examples/domitest.html
@@ -86,19 +86,25 @@
       
       <div class="slide" id="slide2" data-anchor="slide2">
         <h1>KYK</h1>
+        <img src="http://placehold.it/300x200">
+        <p>some info text</p>        
       </div>
       
       <div class="slide" id="slide3" data-anchor="slide3">
         <h1>Earthy</h1>
+        <img src="http://placehold.it/300x200">
         <p>some info text</p>
-        <iframe class="earthy" src="https://earthy.herokuapp.com"></iframe>
       </div>  
 
       <div class="slide" id="slide4" data-anchor="slide4">
         <h1>Tic Tac Toe</h1>
+        <img src="http://placehold.it/300x200">
+        <p>some info text</p>        
       </div>
       <div class="slide" id="slide5" data-anchor="slide5">
         <h1>Pluralizer</h1>
+        <img src="http://placehold.it/300x200">
+        <p>some info text</p>        
       </div>
 
 	</div>
