--- a/presets/fullPage.js/examples/domitest.html
+++ b/presets/fullPage.js/examples/domitest.html
@@ -78,6 +78,12 @@
       <div class="slide" id="slide1" data-anchor="slide1">
         <div class="intro">
           <h1>Overview</h1>
+            <img src="http://placehold.it/100x80">
+            <img src="http://placehold.it/100x80">
+            <img src="http://placehold.it/100x80">
+            <img src="http://placehold.it/100x80">
+            <img src="http://placehold.it/100x80">        
+            <img src="http://placehold.it/100x80">
           <p>
             Click on the arrows to navigate through the projects or click on the names below to see the individual projects.
           </p>
@@ -97,10 +103,29 @@
       </div>  
 
       <div class="slide" id="slide4" data-anchor="slide4">
-        <h1>Tic Tac Toe</h1>
-        <img src="http://placehold.it/300x200">
-        <p>some info text</p>        
+        <h1>Games</h1>
+        <div class="games">
+          <div class="game">
+            <h2>Tic Tac Toe</h2>
+            <img src="http://placehold.it/300x200">
+            <p>some info text</p>
+          </div>
+
+          <div class="game">
+            <h2>Circle game</h2>
+            <img src="http://placehold.it/300x200">
+            <p>some info text</p>
+          </div>  
+
+          <div class="game">
+            <h2>Memory</h2>
+            <img src="http://placehold.it/300x200">
+            <p>some info text</p>
+          </div> 
+        </div>       
+
       </div>
+
       <div class="slide" id="slide5" data-anchor="slide5">
         <h1>Pluralizer</h1>
         <img src="http://placehold.it/300x200">
