--- a/presets/fullPage.js/examples/domitest.html
+++ b/presets/fullPage.js/examples/domitest.html
@@ -78,14 +78,46 @@
       <div class="slide" id="slide1" data-anchor="slide1">
         <div class="intro">
           <h1>Overview</h1>
-            <img src="http://placehold.it/100x80">
-            <img src="http://placehold.it/100x80">
-            <img src="http://placehold.it/100x80">
-            <img src="http://placehold.it/100x80">
-            <img src="http://placehold.it/100x80">        
-            <img src="http://placehold.it/100x80">
+            <ul class="overview">
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>KYK</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>Shuffle it</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>Tic Tac Toe</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>Circlegame</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>Memory</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>  
+              <li>
+                <img src="http://placehold.it/100x80">
+                <h3>Pluralizer</h3>
+                <a href="code">code</a> | 
+                <a href="live">live</a>
+              </li>                                                      
+            </ul>
           <p>
-            Click on the arrows to navigate through the projects or click on the names below to see the individual projects.
+            Click on the arrows to navigate through the projects or click on the names below to see get details for some selected projects. 
           </p>
         </div>
       </div>
@@ -145,9 +177,10 @@
     
     <div class="intro">
       <h1>how to get in touch?</h1>
-      <h3>mail: info@domicode.com</h3>
-      <h3>skype: dschuwey</h3>
-      <h3>twitter: @domi_code</h3>
+      <h3>mail: <span>info@domicode.com</span></h3>
+      <h3>skype: <span>dschuwey</span></h3>
+      <h3>twitter: <a href="https://twitter.com/domi_code">@domi_code</a></h3>
+      <h3>linkedin: <a href="https://www.linkedin.com/profile/view?id=102479870&trk=nav_responsive_tab_profile" target="blank">my profile</a></h3>
     </div>
 
   </div>
