--- a/presets/fullPage.js/publish/index.html
+++ b/presets/fullPage.js/publish/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />	
-	<title>Continuous Scroll - fullPage.js</title>
+	<title>welcome to domi|code</title>
 	<meta name="author" content="Matthew Howell" />
 	<meta name="description" content="fullPage continuous scrolling demo." />
 	<meta name="keywords"  content="fullpage,jquery,demo,scroll,loop,continuous" />
@@ -22,6 +22,14 @@
 		
 	<script src="../jquery.js"></script>
 	<script src="../jqueryui.js"></script>
+
+  <script>
+    for (var i = 1; i <= 3; i++) {
+      pic[i] new Image();
+      pic[i].src="backgrounds/image"+[i]+".jpg";
+    };
+  </script>
+
 	
 	<script type="text/javascript" src="../jquery.fullPage.js"></script>
 	<script type="text/javascript">
@@ -42,7 +50,7 @@
 
   <script type="text/javascript" src="media.js"></script> 
   <script type="text/javascript" src="jquery.metadata.js"></script> 
-  <script type="text/javascript" src="../content.js"></script>  
+  <script type="text/javascript" src="content.js"></script>  
 
 
 </head>
@@ -178,6 +186,13 @@
 
 
 </div>
+
+  <script>
+    for (var i = 4; i <= 12; i++) {
+      pic[i] new Image();
+      pic[i].src="backgrounds/image"+[i]+".jpg";
+    };
+  </script>
 
 </body>
 </html>
