--- a/presets/fullPage.js/publish/index.html
+++ b/presets/fullPage.js/publish/index.html
@@ -20,13 +20,13 @@
 		</script>
 	<![endif]-->
 		
-	<script src="../jquery.js"></script>
-	<script src="../jqueryui.js"></script>
+	<script src="jquery.js"></script>
+	<script src="jqueryui.js"></script>
 
   <script>
     for (var i = 1; i <= 3; i++) {
-      pic[i] new Image();
-      pic[i].src="backgrounds/image"+[i]+".jpg";
+      image[i] new Image();
+      image[i].src="/backgrounds/image"+[i]+".jpg";
     };
   </script>
 
@@ -189,10 +189,11 @@
 
   <script>
     for (var i = 4; i <= 12; i++) {
-      pic[i] new Image();
-      pic[i].src="backgrounds/image"+[i]+".jpg";
+      image[i] new Image();
+      image[i].src="/backgrounds/image"+[i]+".jpg";
     };
   </script>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
