changed css styling for h1

--- a/presets/fullPage.js/publish/index.html
+++ b/presets/fullPage.js/publish/index.html
@@ -176,8 +176,9 @@
       <h1>how to get in touch?</h1>
       <h3>mail: <span>info@domicode.com</span></h3>
       <h3>skype: <span>dschuwey</span></h3>
-      <h3>twitter: <a href="https://twitter.com/domi_code"><span>@domi_code</span></a></h3>
+      <h3>twitter: <a href="https://twitter.com/domi_code" target="blank"><span>@domi_code</span></a></h3>
       <h3>linkedin: <a href="https://www.linkedin.com/profile/view?id=102479870&trk=nav_responsive_tab_profile" target="blank"><span>my profile</span></a></h3>
+      <h3>github: <a href="https://github.com/domicode" target="blank"><span>domicode</span></a></h3>
     </div>
 
   </div>
