--- a/presets/fullPage.js/publish/index.html
+++ b/presets/fullPage.js/publish/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="../jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
-  <link rel="stylesheet" type="text/css" href="stylesheet2209css.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 	<!--[if IE]>
 		<script type="text/javascript">
