update resume page

--- a/presets/fullPage.js/publish/index.html
+++ b/presets/fullPage.js/publish/index.html
@@ -164,9 +164,9 @@
 	</div>
 
   <div class="section resume" id="section3">
-    <div class="resume-wrapper">
-      <a class="media resume" href="../resume.pdf"></a>
-      <a class="link resume" href="../resume.pdf">download pdf</a>
+    <div class="intro">
+      <h1>need my resume?</h1>
+      <h3><a href="#contact"><span>get in touch with me</span></a></h3>
     </div>
   </div>
 
